# sentiment-analysis-imdb-RNN

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: embedding.ipynb  prediction.ipynb  training.ipynb
