[project]
name = "rnn-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "ruff>=0.13.3",
    "scikeras>=0.13.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "uvicorn>=0.37.0",
]
